force-app/main/default/objects/TCL_Test__c/TCL_Test__c.object-meta.xml
<CustomObject>
    <label>Test</label>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Test ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>