force-app/main/default/objects/TCL_Test__c/fields/Test_Bank__c.field-meta.xml
<CustomField>
    <fullName>Test_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Bank</label>
    <referenceTo>TCL_Test_Bank__c</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>Tests</relationshipName>
    <type>Lookup</type>
</CustomField>